--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "copy"
   ],
   "devDependencies": {
-    "vows" :  "0.6.x"
+    "vows" :  "0.6.x",
+    "wrench" : "1.3.x"
   },
   "license": "MIT",
   "engines": {
